updated to use modern Base64 through java.util.Base64 for compatibility with newer java versions.